@@ -599,21 +599,10 @@ namespace libtorrent { namespace dht
 		add_node(host->endpoint());
 	}
 
-	void dht_tracker::add_router_node(std::pair<std::string, int> const& node)
+	void dht_tracker::add_router_node(udp::endpoint const& node)
 	{
 		mutex_t::scoped_lock l(m_mutex);
-		char port[7];
-		snprintf(port, sizeof(port), "%d", node.second);
-		udp::resolver::query q(node.first, port);
-		m_host_resolver.async_resolve(q,
-			bind(&dht_tracker::on_router_name_lookup, self(), _1, _2));
-	}
-
-	void dht_tracker::on_router_name_lookup(error_code const& e
-		, udp::resolver::iterator host)
-	{
-		if (e || host == udp::resolver::iterator()) return;
-		m_dht.add_router_node(host->endpoint());
+		m_dht.add_router_node(node);
 	}
 
 	void dht_tracker::on_bootstrap(std::vector<std::pair<node_entry, std::string> > const&)
